...
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:orientation="vertical"
    android:id="@+id/activity_draw_layout">

    <view class="com.cpen321.circuitsolver.ui.draw.DrawActivity$CircuitView"
        android:id="@+id/circuitFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/componentMenuButton"
            android:scaleType="fitCenter"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_pen"
            android:tint="@color/colorPrimary"/>
...
            android:scaleType="fitCenter"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_solve"
            android:tint="@color/colorPrimary"
            android:id="@+id/solveButton" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
...
            <TextView
                android:hint="Voltage"
                android:gravity="center"
                android:textColor="@color/circuitBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/voltageText"
                android:layout_weight="0.5" />

            <TextView
                android:hint="Current"
                android:gravity="center"
                android:textColor="@color/circuitBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/currentText"
                android:layout_weight="0.5" />
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:gravity="center"
            android:hint="Component Value"
            android:inputType="numberDecimal"
            android:ems="10"
            android:shadowColor="@color/circuitBackground"
            android:textColor="@color/circuitBackground"
            android:id="@+id/component_value"
            android:backgroundTint="@color/backgroundGray"
            android:layout_below="@+id/editButtonPanel" />
        <TextView
            android:hint="Units"
            android:id="@+id/units_display"
            android:textColor="@color/circuitBackground"
            android:layout_toRightOf="@id/component_value"
            android:layout_alignBaseline="@id/component_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
...
