...


    <!--Draw Activity Strings-->
    <string name="component_value">Component Value</string>

    <string name="add_button_tag">Add</string>
    <string name="change_button_tag">Change</string>
    <string name="erase_button_tag">Erase</string>
    <string name="solve_button_tag">Solve</string>

    <string name="move_button_tag">Move</string>
    <string name="edit_button_tag">Edit</string>

...
