...
        android:layout_gravity="bottom|start"
        app:backgroundTint="@color/delete_brown"
        android:visibility="gone"
        app:srcCompat="@drawable/delete" />

    <!--<Button-->
        <!--android:text="Draw Circuit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="60dp"-->
        <!--android:id="@+id/drawCircuitButton"-->
        <!--android:layout_gravity="top|left"-->
        <!--app:layout_anchor="@+id/include"-->
        <!--app:layout_anchorGravity="center_vertical|right" />-->
...
